# Parachute

./: CMakeLists.txt  LICENSE  README.md  build.sh  decrypt_pf.py  files.txt
include/model/: LanguageManager.h  MessageEncoder.h  ParachuteModel.h
include/presenter/: ParachutePresenter.h
include/view/: BinaryWidget.h  MainWindow.h  MainWindow.ui  ParachuteView.h  ui_MainWindow.h
resources/: resources.qrc
resources/translations/: en.ts  fr.qm  fr.ts
src/: main.cpp
src/model/: LanguageManager.cpp  MessageEncoder.cpp  ParachuteModel.cpp
src/presenter/: ParachutePresenter.cpp
src/view/: BinaryWidget.cpp  MainWindow.cpp  ParachuteView.cpp
